[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-combatlog"
version = "0.1.1"
description = "Combat log for Endstone"
authors = [
    { name = "niko-at-chalupa" }
]
dependencies = [
    "endstone",
    "pydantic",
    "ruamel.yaml",
]

[project.entry-points."endstone"]
combatlog = "endstone_combatlog:CombatlogPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_combatlog"]